Update GitHub Actions workflow for PDF deployment and enhance README with GitHub Pages instructions

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -33,8 +33,10 @@ jobs:
             *.tex
       - name: move compiled PDFs to documents folder
         run: |
-          mkdir -p documents
-          mv *.pdf documents/
+          mkdir -p _site/documents
+          mv *.pdf _site/documents/
+          mkdir -p _site/figures
+          mv figures/*.pdf _site/figures/
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
